--- a/faq.html
+++ b/faq.html
@@ -1,51 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ – NightShift AI</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FAQ – NightShift AI</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
+
 <body>
 
-<header>
-    <nav>
-        <h1 class="logo">NightShift <span>AI</span></h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container">
+      <div class="logo">NightShift AI</div>
+      <nav class="nav">
+        <a href="/">Home</a>
+        <a href="/pricing">Pricing</a>
+        <a href="/faq" class="active">FAQ</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<section class="faq">
-    <h2>Frequently Asked Questions</h2>
+  <!-- HERO -->
+  <section class="hero small-hero">
+    <div class="container">
+      <h1>Frequently Asked Questions</h1>
+      <p class="subtitle">Quick answers to everything about NightShift AI</p>
+    </div>
+  </section>
 
-    <div class="faq-item">
-        <h3>How fast does NightShift AI answer calls?</h3>
-        <p>Under 3 seconds, 24/7/365.</p>
-    </div>
+  <!-- FAQ SECTION -->
+  <section class="faq container">
 
-    <div class="faq-item">
-        <h3>Does it work with my PMS?</h3>
-        <p>Yes. We support Cloudbeds, WebRezPro, ResNexus, Little Hotelier and more.</p>
-    </div>
+    <div class="faq-item">
+      <h3>What exactly is NightShift AI?</h3>
+      <p>
+        NightShift AI is a 24/7 voice assistant that answers all calls for your hotel,
+        handles bookings, quotes rates, screens emergencies, manages guest requests,
+        and instantly sends alerts to your phone.
+      </p>
+    </div>
 
-    <div class="faq-item">
-        <h3>Can the AI collect payments?</h3>
-        <p>Yes — via secure Stripe text links.</p>
-    </div>
+    <div class="faq-item">
+      <h3>Does the AI sound robotic?</h3>
+      <p>
+        No — NightShift AI uses natural speech with human pacing, emotion,
+        and clarity. Callers believe they are speaking to a real front-desk employee.
+      </p>
+    </div>
 
-    <div class="faq-item">
-        <h3>What languages does it support?</h3>
-        <p>English, Spanish, French, Hindi, Gujarati, and more.</p>
-    </div>
-</section>
+    <div class="faq-item">
+      <h3>Can it actually book rooms?</h3>
+      <p>
+        Yes. It checks availability in real time, collects guest details,
+        calculates totals, and saves the reservation into your dashboard.
+        You receive an instant SMS + email summary for every booking.
+      </p>
+    </div>
 
-<footer>
-    <p>© 2025 NightShift AI. All rights reserved.</p>
-</footer>
+    <div class="faq-item">
+      <h3>Is it compliant with laws like PCI & ADA?</h3>
+      <p>
+        100%. The system strictly follows:
+        <br>• PCI – never accepts card numbers over the phone  
+        <br>• ADA – follows service animal questions exactly  
+        <br>• State hotel laws  
+        <br>• Brand quality standards  
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Does it replace or support my front-desk employees?</h3>
+      <p>
+        Both. Most hotels use NightShift AI for low-volume hours (6pm–7am)
+        or overflow calls; others run it 24/7. It captures every call instantly
+        so you never lose bookings.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How fast does it answer calls?</h3>
+      <p>
+        Every call is answered in under 3 seconds, 24 hours a day.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>What happens during emergencies?</h3>
+      <p>
+        NightShift AI immediately tells callers to hang up and dial 911.
+        Afterward it can transfer to the manager or front desk number on file.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can I review call logs?</h3>
+      <p>
+        Yes. Every call is saved automatically — with transcripts, summaries,
+        caller ID, tags, sentiment, and reservation outcomes — inside your dashboard.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can the AI speak other languages?</h3>
+      <p>
+        Yes. It automatically switches between English, Spanish, Hindi,
+        Gujarati, and French depending on what the caller starts speaking.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How quickly can I start?</h3>
+      <p>
+        Setup takes less than 10 minutes.  
+        Most hotels go live the same day.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Does NightShift AI integrate with PMS systems?</h3>
+      <p>
+        Yes. Full PMS integrations are being released for Cloudbeds,
+        RoomMaster, Opera, and WebRezPro.  
+        Until then, all reservations still log perfectly in your dashboard.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>What about staff notifications?</h3>
+      <p>
+        Each reservation triggers instant:
+        <br>• SMS alert  
+        <br>• Email summary  
+        <br>• Dashboard entry  
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>How does billing work?</h3>
+      <p>
+        Simple flat monthly pricing per property.  
+        No contracts. Cancel anytime.
+      </p>
+    </div>
+
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <p>© 2025 NightShift AI — All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
