--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – NightShift AI</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact – NightShift AI</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
+
 <body>
 
-<header>
-    <nav>
-        <h1 class="logo">NightShift <span>AI</span></h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-        </ul>
-    </nav>
-</header>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container">
+      <div class="logo">NightShift AI</div>
+      <nav class="nav">
+        <a href="/">Home</a>
+        <a href="/pricing">Pricing</a>
+        <a href="/faq">FAQ</a>
+        <a href="/contact" class="active">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-<section class="contact">
-    <h2>Contact Us</h2>
-    <p>Email us anytime:</p>
-    <p class="email">support@nightshifthotels.com</p>
-</section>
+  <!-- HERO -->
+  <section class="hero small-hero">
+    <div class="container">
+      <h1>Contact Us</h1>
+      <p class="subtitle">We’re here to help — reach out anytime</p>
+    </div>
+  </section>
 
-<footer>
-    <p>© 2025 NightShift AI. All rights reserved.</p>
-</footer>
+  <!-- CONTACT SECTION -->
+  <section class="section">
+    <div class="container contact-container">
+
+      <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <p>Whether you're ready to deploy NightShift AI or just have questions, we respond within minutes.</p>
+
+        <div class="contact-item">
+          <h3>Email</h3>
+          <p><a href="mailto:support@nightshifthotels.com">support@nightshifthotels.com</a></p>
+        </div>
+
+        <div class="contact-item">
+          <h3>Phone</h3>
+          <p><a href="tel:+14237715523">(423) 771-5523</a></p>
+        </div>
+
+        <div class="contact-item">
+          <h3>Business Hours</h3>
+          <p>We respond 24/7 — including holidays.</p>
+        </div>
+
+        <div class="contact-item">
+          <h3>Demo & Onboarding</h3>
+          <p>
+            Want a live walkthrough?  
+            <a href="mailto:support@nightshifthotels.com">Request a free demo</a> and we’ll schedule it instantly.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <p>© 2025 NightShift AI — All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
