--- a/index.html
+++ b/index.html
@@ -1,105 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NightShift AI – 24/7 Hotel Voice Assistant</title>
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
-
-    <!-- SEO -->
-    <meta name="description" content="NightShift AI is a 24/7 voice assistant for hotels, answering calls instantly, booking rooms, and boosting revenue while reducing labor costs.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NightShift AI – 24/7 Hotel Voice Assistant</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- Header / Navigation -->
-    <header>
-        <nav class="navbar">
-            <h1 class="logo">NightShift <span>AI</span></h1>
+  <!-- NAVIGATION -->
+  <header class="navbar">
+    <nav>
+      <a href="/">Home</a>
+      <a href="/pricing.html">Pricing</a>
+      <a href="/faq.html">FAQ</a>
+      <a href="/contact.html">Contact</a>
+      <a href="/dashboard/">Dashboard</a>
+    </nav>
+  </header>
 
-            <ul class="nav-links">
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>NightShift AI</h1>
+    <p>Your hotel’s 24/7 intelligent voice assistant.  
+       Never miss a booking again — even at 3 AM.</p>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h2>24/7 AI Front Desk for Independent Hotels</h2>
-            <p>
-                NightShift instantly answers calls, books rooms, handles pet/smoking questions,
-                sends booking confirmations to management, and covers your front desk even when staff is unavailable.
-            </p>
-            <a href="pricing.html" class="cta-button">See Pricing</a>
-        </div>
-    </section>
+    <a class="cta-btn" href="/pricing.html">View Pricing</a>
+  </section>
 
-    <!-- Feature Highlights -->
-    <section class="features">
-        <h2>Why Hotels Choose NightShift</h2>
+  <!-- FEATURES -->
+  <section class="features">
+    <div class="feature">
+      <h3>📞 Answers Every Call</h3>
+      <p>Guests get instant responses — no holds, no missed opportunities.</p>
+    </div>
 
-        <div class="features-grid">
+    <div class="feature">
+      <h3>🏨 Books Rooms Automatically</h3>
+      <p>Real-time pricing + availability for independent hotels.</p>
+    </div>
 
-            <div class="feature">
-                <h3>📞 Answers Every Call</h3>
-                <p>Never miss a reservation opportunity — NightShift answers in under 3 seconds, 24/7.</p>
-            </div>
+    <div class="feature">
+      <h3>🐶 Handles Pet Policies</h3>
+      <p>Explains your rules, collects details, adds fees automatically.</p>
+    </div>
 
-            <div class="feature">
-                <h3>🏨 Books Rooms Automatically</h3>
-                <p>
-                    Handles all booking details: dates, nights, pets, smoking preference,
-                    and sends confirmations to management.
-                </p>
-            </div>
+    <div class="feature">
+      <h3>📝 Sends GM Call & Booking Summaries</h3>
+      <p>SMS + email recaps for every reservation and important call.</p>
+    </div>
+  </section>
 
-            <div class="feature">
-                <h3>💵 Boost Revenue</h3>
-                <p>
-                    Hotels typically see 10–20% more bookings due to zero missed calls and instant availability checks.
-                </p>
-            </div>
-
-            <div class="feature">
-                <h3>👨‍✈️ Manager Notifications</h3>
-                <p>Each reservation sends an automatic SMS/email summary to your team.</p>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- Use Cases -->
-    <section class="use-cases">
-        <h2>Perfect For</h2>
-
-        <div class="use-grid">
-            <div class="use-item">
-                <h3>🏨 20–120 Room Independent Hotels</h3>
-                <p>Ideal for limited-service properties where staffing is inconsistent.</p>
-            </div>
-
-            <div class="use-item">
-                <h3>🌙 Night Shift Coverage</h3>
-                <p>AI handles calls while your night auditor focuses on operations.</p>
-            </div>
-
-            <div class="use-item">
-                <h3>📉 Labor Shortages</h3>
-                <p>Eliminate missed calls when the front desk steps away or is short-staffed.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 NightShift AI. All rights reserved.</p>
-        <p><a href="contact.html">Contact Us</a></p>
-    </footer>
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 NightShift AI. All rights reserved.</p>
+  </footer>
 
 </body>
+
 </html>
